# hr-bot-new

./: .env  .env.example  ISHLATISH_QOLLANMASI.md  README.md  VIDEO_SOZLASH.md  XATOLIKLARNI_HAL_QILISH.md  bot.py  config.py  excel_generator.py  nohup.out  pyproject.toml  questions.py  requirements.txt
